# bindings-generat

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENHANCED_DEPENDENCY_DETECTION.md  ENHANCEMENTS_COMPLETED.md  ENRICHMENT_OPPORTUNITIES.md  ENRICHMENT_USAGE_AUDIT.md  FEATURE_GATED_EXAMPLES.md  HISTORY_REWRITE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_AUDIT.md  LICENSE-MIT  PRE_PUBLICATION_AUDIT.md  README.md  README_TEMPLATE.md  REAL_WORLD_GENERATION_ANALYSIS.md  ROADMAP.md  ROADMAP_AUDIT.md  SETUP_COMPLETE.md  SPRINT_3.5_COMPLETION.md  SPRINT_5_5_COMPLETION.md  SPRINT_5_6_COMPLETION.md  STATUS.md  TEST_COVERAGE.md  TEST_GENERIC_BUILD.md  TEST_IMPROVEMENTS.md  TEST_SUMMARY.md  TOOL_ARCHITECTURE.md  VISION.md  WRAPPER_ENRICHMENT_PLAN.md  default_13160882381825088794_0_12072.profraw  default_13160882381825088794_0_12936.profraw  default_13160882381825088794_0_14028.profraw  default_13160882381825088794_0_16064.profraw  default_13160882381825088794_0_17232.profraw  default_13160882381825088794_0_19872.profraw  default_13160882381825088794_0_21756.profraw  default_13160882381825088794_0_22012.profraw  (+340 more)
.github/workflows/: ci.yml
crates/c_header_analyzer/: Cargo.toml  README.md
crates/c_header_analyzer/src/: lib.rs  main.rs
crates/header_lookup_example/: Cargo.toml
crates/header_lookup_example/src/: main.rs
crates/library_db/: Cargo.toml
crates/library_db/src/: lib.rs
crates/library_inspector/: Cargo.toml
crates/library_inspector/outs/: cudnn64_9_dll.json  cudnn64_9_lib.json  cudnn_ops64_9_dll.json
crates/library_inspector/src/: bundling.rs  lib.rs  loader.rs  main.rs
crates/library_inspector/tests/fixtures/: LICENSE-zlib.txt  README.md  zlib1.dll.note.txt  zlib1.dll.sha256
cudnn-sys-test/: Cargo.toml  README.md  build_errors.txt
cudnn-sys-test/src/: discovery_install.rs  discovery_shared.rs  ffi.rs  ffi_bindings.rs  lib.rs  loader.rs
cudnn-sys-test/tests/: functional_tests.rs  integration_tests.rs  runtime_tests.rs
cudnn-sys-test2/: Cargo.toml  README.md
cudnn-sys-test2/src/: ffi.rs  ffi_bindings.rs  lib.rs  loader.rs
cudnn-sys-test2/tests/: functional_tests.rs  integration_tests.rs  runtime_tests.rs
docs/: ARCHIVE_SUPPORT.md  FEATURE_ARCHIVE_SUPPORT.md  ISSUE_37_COMPLETION.md  USAGE_EXAMPLE.md  database-integration-complete.md  database-integration-guide.md  sprint2-task23-summary.md  sprint2-task7-summary.md
examples/: archive_usage.md  ecosystem_integration.rs  enhanced_dependency_demo.rs  enhanced_llm_demo.rs  tool_architecture_demo.rs
examples/simple_lib/include/: simple_lib.h
src/: cli.rs  config.rs  dependency_detection.rs  lib.rs  main.rs
src/analyzer/: ambiguity.rs  anti_patterns.rs  api_sequences.rs  ast.rs  async_patterns.rs  attributes.rs  callback_analysis.rs  cross_references.rs  error_docs.rs  error_semantics.rs  errors.rs  example_patterns.rs  global_state.rs  lifetime.rs  llm_doc_orchestrator.rs  llm_parameters.rs  mod.rs  numeric_constraints.rs  ownership.rs  patterns.rs  performance.rs  platform.rs  platform_docs.rs  preconditions.rs  raii.rs  resource_limits.rs  semantic_analysis.rs  semantic_grouping.rs  smart_errors.rs  test_mining.rs  thread_safety.rs  trait_abstractions.rs  type_docs.rs  version_compat.rs  version_features.rs
src/assertions/: contract_parser.rs  generator.rs  mod.rs
src/audit/: cognitive_audit.rs  mod.rs  safety_audit.rs  security_audit.rs
src/database/: mod.rs  remote.rs
src/discovery/: changelog_parser.rs  crates_io.rs  google_search.rs  headers.rs  libraries.rs  mod.rs
src/ecosystem/: detector.rs  mod.rs  serde_integration.rs  tokio_integration.rs
src/enrichment/: context.rs  doc_finder.rs  header_parser.rs  mod.rs  types.rs
src/enrichment/code_search/: github.rs  gitlab.rs  mod.rs  searcher.rs  types.rs  web.rs
src/enrichment/doc_parser/: doxygen.rs  mod.rs  types.rs  (+1 more)
src/ffi/: bindgen.rs  enricher.rs  mod.rs  parser.rs
src/generator/: benchmarks.rs  builder_features.rs  builder_typestate.rs  builders.rs  cross_platform.rs  doc_generator.rs  enums.rs  ergonomics.rs  errors.rs  features.rs  functional_tests.rs  methods.rs  mod.rs  readme.rs  runtime_tests.rs  templates.rs  templates_minimal.rs  tests.rs  wrappers.rs
src/interactive/: clarification.rs  crates.rs  decisions.rs  mod.rs  questions.rs  setup.rs
src/llm/: cache.rs  client.rs  docs.rs  enhanced_context.rs  enhancements.rs  installer.rs  mod.rs  models.rs  network.rs  prompts.rs
src/output/: error_parser.rs  formatter.rs  library_finder.rs  mod.rs  refinement.rs  validator.rs  writer.rs
src/publishing/: mod.rs  wizard.rs
src/sources/: archives.rs  mod.rs
src/submission/: git_cli.rs  github_token.rs  manual.rs  mod.rs
src/testing/: mod.rs  property_tests.rs
src/tooling/: cargo_features.rs  documentation.rs  enhanced_testing.rs  ide_integration.rs  mod.rs  performance.rs  safety_instrumentation.rs
src/tools/: build_fixing.rs  build_validation.rs  dependency_detection.rs  discovery.rs  documentation.rs  enhanced_dependency_detection.rs  ffi_generation.rs  library_search.rs  llm_orchestrator.rs  mod.rs  pattern_analysis.rs  pattern_storage.rs  wrapper_generation.rs
src/user_config/: mod.rs  schema.rs
src/utils/: doc_sanitizer.rs  mod.rs  naming.rs  progress.rs
test-doxygen-output/: Cargo.toml  build.rs
test-doxygen-output/src/: lib.rs
test-errors-lib/include/: test_errors.h
test-lib/include/: test.h
test_input/: simple.h
test_output_clean/src/: ffi.rs
test_output_clean2/src/: lib.rs
test_output_clean2/tests/: integration_tests.rs
test_output_deps/: Cargo.toml  build.rs
test_output_indicatif/: build.rs
tests/: bindings-generat.code-workspace  end_to_end_tests.rs  header_comment_integration.rs  integration_tests.rs  sources_tests.rs  test_cross_platform.rs  test_enrichment.rs  test_functional_generation.rs  thread_safety_integration.rs
tests/fixtures/: thread_safety_test.h
tmp_output/: Cargo.toml  README.md  build.rs
tmp_output/src/: ffi.rs  ffi_bindings.rs  lib.rs  loader.rs
tmp_output/tests/: functional_tests.rs  integration_tests.rs  runtime_tests.rs
(+2 files in other folders)
