[package]
    edition = "2021"
    name    = "library_db"
    version = "0.1.0"

[dependencies]
    anyhow     = "1.0"
    base64     = "0.22"
    reqwest    = { version = "0.12", features = ["blocking", "json"] }
    serde      = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"

    chrono = "0.4"

[dev-dependencies]
    tempfile = "3.3"
